--- a/MTTS Website Code/events.html
+++ b/MTTS Website Code/events.html
@@ -9,7 +9,7 @@
     <body>
         <h1 id = "header_logo"><img src="/MTTS website images/Logo MTT-S.png" alt="IEEE MTT-S SB DA-IICT" id = "header_logo_left">
             <a href="https://ieee-sb-daiict.github.io/ieee-2020/index.html" title="IEEE Student Branch DAIICT" target="_blank"><img src="/MTTS website images/IEEE-SB-DAIICT.png" alt="IEEE SB-DAIICT" id = "header_logo_right"></a></h1>
-        <nav class ="header_menu"><ul class = "header_menu">
+        <nav class ="header_menu" id="header_menu"><ul class = "header_menu">
             <li class="header_links"><a href="Home.html" title="Home">HOME</a></li>
             <li class="active"><a href="events.html" title="Event Timeline">EVENT TIMELINE</a></li>
             <li class="header_links"><a href="gallery_web.html" title="Gallery">GALLERY</a></li>
@@ -85,5 +85,13 @@
             <h1 class="credits_copyright"><b>Designed by Darshil Parikh, IEEE MTT-S DAIICT</b></h1>
             <h1 class="credits_copyright">&copy; 2020 IEEE MTT-S DAIICT. All rights reserved</h1>
         </div>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script>
+            var distance = $('#header_menu').offset().top, $window = $(window);
+            $window.scroll(() => {
+                if ( $window.scrollTop() >= distance ) $('#header_menu').addClass('navbar-fixed-top');
+                else $('#header_menu').removeClass('navbar-fixed-top');
+            });
+        </script>
     </body>
 </html>
