--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="MTTS Website Code/home_style.css">
+        <link rel="stylesheet" type="text/css" href="/MTTS Website Code/home_style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">   
         <title>IEEE MTT-S SB DAIICT</title> 
         <link rel="icon" href="/MTTS website images/Logo MTT-S.png">    
