--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
         <h1 id = "header_logo"><img src="/MTTS website images/Logo MTT-S.png" alt="IEEE MTT-S SB DA-IICT" id = "header_logo_left">
             <a href="https://ieee-sb-daiict.github.io/ieee-2020/index.html" title="IEEE Student Branch DAIICT" target="_blank"><img src="/MTTS website images/IEEE-SB-DAIICT.png" alt="IEEE SB-DAIICT" id = "header_logo_right"></a></h1>
         <nav class ="header_menu" id="header_menu"><ul class = "header_menu">
-            <li class="header_links"><a href="Home.html" title="Home">HOME</a></li>
+            <li class="header_links"><a href="index.html" title="Home">HOME</a></li>
             <li class="header_links"><a href="events.html" title="Event Timeline">EVENT TIMELINE</a></li>
             <li class="header_links"><a href="gallery_web.html" title="Gallery">GALLERY</a></li>
             <li class="header_links"><a href="https://ieee-sb-daiict.github.io/ieee-2020/team.html" title="Execomm committee">EXECOMM</a></li>
