--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="/MTTS Website Code/home_style.css">
+        <link rel="stylesheet" type="text/css" href="./MTTS Website Code/home_style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">   
         <title>IEEE MTT-S SB DAIICT</title> 
         <link rel="icon" href="/MTTS website images/Logo MTT-S.png">    
     </head>
     <body>
-        <h1 id = "header_logo"><img src="/MTTS website images/Logo MTT-S.png" alt="IEEE MTT-S SB DA-IICT" id = "header_logo_left">
-            <a href="https://ieee-sb-daiict.github.io/ieee-2020/index.html" title="IEEE Student Branch DAIICT" target="_blank"><img src="/MTTS website images/IEEE-SB-DAIICT.png" alt="IEEE SB-DAIICT" id = "header_logo_right"></a></h1>
+        <h1 id = "header_logo"><img src="./MTTS website images/Logo MTT-S.png" alt="IEEE MTT-S SB DA-IICT" id = "header_logo_left">
+            <a href="https://ieee-sb-daiict.github.io/ieee-2020/index.html" title="IEEE Student Branch DAIICT" target="_blank"><img src="./MTTS website images/IEEE-SB-DAIICT.png" alt="IEEE SB-DAIICT" id = "header_logo_right"></a></h1>
         <nav class ="header_menu" id="header_menu"><ul class = "header_menu">
             <li class="active"><a href="index.html" title="Home">HOME</a></li>
             <li class="header_links"><a href="events.html" title="Event Timeline">EVENT TIMELINE</a></li>
@@ -19,7 +19,7 @@
             <li class="header_links"><a href="contact.html" title="Contact Us">CONTACT US</a></li>
         </ul></nav>    
         <div class="main_description">
-            <img src="/MTTS website images/Logo MTT-S.png" alt="IEEE MTT-S SB DA-IICT" id="desc_logo"></div>
+            <img src="./MTTS website images/Logo MTT-S.png" alt="IEEE MTT-S SB DA-IICT" id="desc_logo"></div>
             <p id = "description">IEEE MTT-S Student Branch DAIICT</p><p id="description_text">
                 IEEE MTT-S DAIICT Student Branch chapter is volunteer based chapter and aims to provide a platform for students to learn and interact with like-minded people. 
                 It provides opportunity for development of professional and technical skills about microwave techniques and related technologies. 
@@ -60,19 +60,19 @@
             <div class="event_handler"><h1 class="event_handler">Past Events:</h1></div>
             <div class="events_back">
                 <div class="past_events">
-                    <img src="/MTTS website images/PosterML.jpg" alt="Hands-on Workshop on ML in RF and Microwave" class="past_event_poster_ver"><h2 class="event_description_past">Hands-on Workshop on ML in RF and Microwave<br></h2>
+                    <img src="./MTTS website images/PosterML.jpg" alt="Hands-on Workshop on ML in RF and Microwave" class="past_event_poster_ver"><h2 class="event_description_past">Hands-on Workshop on ML in RF and Microwave<br></h2>
                     <h2 class="date_time">Date: 5th and 6th September 2020<br>Venue: Online<br></h2><p class="past_event_description">The Hands-on workshop was on the topic ML in RF and Microwave. The first speaker of the event was <b>Dr. Hardik Patel (Founding Director of Avadhuta Antennaz Solutions Private Limited)</b> and the second speaker was <b>Dr. Ganga Prasad Pandey (Vice Chairman of IEEE MTT/AP Joint Chapter Gujarat Section)</b>. 
                         The session covered all important basics with pratical learning using softwares like <b>Anaconda IDE and Google Colab</b>.</p>
                 </div>
                 <div class="past_events">
-                    <img src="/MTTS website images/Posterfinalmicrowaveday1.png" alt="Microwave Day 2019" class="past_event_poster"><h2 class="event_description_past">Microwave Day<br></h2>
+                    <img src="./MTTS website images/Posterfinalmicrowaveday1.png" alt="Microwave Day 2019" class="past_event_poster"><h2 class="event_description_past">Microwave Day<br></h2>
                     <h2 class="date_time">Date: 12th October 2019<br>Venue: CEP102, DAIICT, Gandhinagar<br></h2><p class="past_event_description">Microwave day was celebrated by MTTS SBC in an interesting and memorable way. We had
                         Millimetre wave technology development scientist at ISRO, <b>Shri Shailendra Singh</b>, and brief talk by
                         <b>Dr. Shiv Mohan (Ex-ISRO)</b>. We also provided hands on experience on CST Microwave Studio
                         Software.</p>
                 </div>
                 <div class="past_events">
-                    <img src="/MTTS website images/5G.jpg" alt="DAIICT Winter School on 5G Communications" class="past_event_poster"><h2 class="event_description_past">DAIICT Winter School on 5G Communications</h2>
+                    <img src="./MTTS website images/5G.jpg" alt="DAIICT Winter School on 5G Communications" class="past_event_poster"><h2 class="event_description_past">DAIICT Winter School on 5G Communications</h2>
                     <h2 class="date_time">Date: 7th and 8th December 2018<br>Venue: CEP102, DAIICT, Gandhinagar<br></h2><p class="past_event_description">This workshop on 5G technology was a 2 day event to familiarize students on the latest
                         developments in fields of communication and microwave technology. The workshop dealt with
                         <b>Massive MIMO and NOMA in 5G, Evolution of Air Interface Towards 5G, 5G Network, 3GPP NRR, 
@@ -80,7 +80,7 @@
                         Network that will be the future of communication.</p>
                 </div>
                 <div class="past_events">
-                    <img src="/MTTS website images/wavesim.jpg" alt="Microwave Nondestructive Testing of Composite Materials and Microwave Imaging of
+                    <img src="./MTTS website images/wavesim.jpg" alt="Microwave Nondestructive Testing of Composite Materials and Microwave Imaging of
                     Human Body" class="past_event_poster"><h2 class="event_description_past">Microwave Nondestructive Testing of Composite Materials and Microwave Imaging of
                         Human Body</h2>
                     <h2 class="date_time">Date: 2019<br>Venue: DAIICT, Gandhinagar<br></h2><p class="past_event_description">This workshop focussed on microwave imaging of human body that gave insights on how
@@ -197,7 +197,7 @@
                     <p style="font-size: 0.5px;">r</p>
                     </div>
                     <div class="placing">
-                        <a href="https://www.daiict.ac.in/" title="DAIICT" class="college_logo" target="_blank"><img src="/MTTS website images/DAIICT logo.png" alt="DAIICT logo"></a>
+                        <a href="https://www.daiict.ac.in/" title="DAIICT" class="college_logo" target="_blank"><img src="./MTTS website images/DAIICT logo.png" alt="DAIICT logo"></a>
                     </div>
                     <div class="placing">
                         <p class="side_heading">Useful Links</p><ul>
