--- a/events.html
+++ b/events.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="event-style.css">
+        <link rel="stylesheet" type="text/css" href="./MTTS Website Code/event-style.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>IEEE MTT-S SB DAIICT</title>
-        <link rel="icon" href="/MTTS website images/Logo MTT-S.png">
+        <link rel="icon" href="./MTTS website images/Logo MTT-S.png" />
     </head>
     <body>
-        <h1 id = "header_logo"><img src="/MTTS website images/Logo MTT-S.png" alt="IEEE MTT-S SB DA-IICT" id = "header_logo_left">
-            <a href="https://ieee-sb-daiict.github.io/ieee-2020/index.html" title="IEEE Student Branch DAIICT" target="_blank"><img src="/MTTS website images/IEEE-SB-DAIICT.png" alt="IEEE SB-DAIICT" id = "header_logo_right"></a></h1>
+        <h1 id = "header_logo"><img src="./MTTS website images/Logo MTT-S.png" alt="IEEE MTT-S SB DA-IICT" id = "header_logo_left">
+            <a href="https://ieee-sb-daiict.github.io/ieee-2020/index.html" title="IEEE Student Branch DAIICT" target="_blank"><img src="./MTTS website images/IEEE-SB-DAIICT.png" alt="IEEE SB-DAIICT" id = "header_logo_right"></a></h1>
         <nav class ="header_menu" id="header_menu"><ul class = "header_menu">
-            <li class="header_links"><a href="Home.html" title="Home">HOME</a></li>
+            <li class="header_links"><a href="index.html" title="Home">HOME</a></li>
             <li class="active"><a href="events.html" title="Event Timeline">EVENT TIMELINE</a></li>
             <li class="header_links"><a href="gallery_web.html" title="Gallery">GALLERY</a></li>
             <li class="header_links"><a href="https://ieee-sb-daiict.github.io/ieee-2020/team.html" title="Execomm committee">EXECOMM</a></li>
@@ -68,7 +68,7 @@
             <p style="font-size: 0.5px;">r</p>
             </div>
             <div class="placing">
-                <a href="https://www.daiict.ac.in/" title="DAIICT" class="college_logo" target="_blank"><img src="/MTTS website images/DAIICT logo.png" alt="DAIICT logo"></a>
+                <a href="https://www.daiict.ac.in/" title="DAIICT" class="college_logo" target="_blank"><img src="./MTTS website images/DAIICT logo.png" alt="DAIICT logo"></a>
             </div>
             <div class="placing">
                 <p class="side_heading">Useful Links</p><ul>
