--- a/history.html
+++ b/history.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="history_style.css">
+        <link rel="stylesheet" type="text/css" href="./MTTS Website Code/history_style.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>IEEE MTT-S SB DAIICT</title>
-        <link rel="icon" href="/MTTS website images/Logo MTT-S.png">        
+        <link rel="icon" href="./MTTS website images/Logo MTT-S.png" />        
     </head>
     <body>
-        <h1 id = "header_logo"><img src="/MTTS website images/Logo MTT-S.png" alt="IEEE MTT-S SB DA-IICT" id = "header_logo_left">
-            <a href="https://ieee-sb-daiict.github.io/ieee-2020/index.html" title="IEEE Student Branch DAIICT" target="_blank"><img src="/MTTS website images/IEEE-SB-DAIICT.png" alt="IEEE SB-DAIICT" id = "header_logo_right"></a></h1>
+        <h1 id = "header_logo"><img src="./MTTS website images/Logo MTT-S.png" alt="IEEE MTT-S SB DA-IICT" id = "header_logo_left">
+            <a href="https://ieee-sb-daiict.github.io/ieee-2020/index.html" title="IEEE Student Branch DAIICT" target="_blank"><img src="./MTTS website images/IEEE-SB-DAIICT.png" alt="IEEE SB-DAIICT" id = "header_logo_right"></a></h1>
         <nav class ="header_menu" id="header_menu"><ul class = "header_menu">
-            <li class="header_links"><a href="Home.html" title="Home">HOME</a></li>
+            <li class="header_links"><a href="index.html" title="Home">HOME</a></li>
             <li class="header_links"><a href="events.html" title="Event Timeline">EVENT TIMELINE</a></li>
             <li class="header_links"><a href="gallery_web.html" title="Gallery">GALLERY</a></li>
             <li class="header_links"><a href="https://ieee-sb-daiict.github.io/ieee-2020/team.html" title="Execomm committee">EXECOMM</a></li>
@@ -23,24 +23,24 @@
             The Student Branch was <b>formed in December 2018 under the guidance of Dr. Deepak Ghodgaonkar</b>. The objective of branch chapter is to conduct 
             technical, professional and social activities in the broad area of <b>RF, microwave, millimeter-wave, and terahertz technologies</b>. Microwave radiations are the backbone of electrical communication systems, radar systems, 5G Cellular Technology, Satellite Communication Systems, IoT/RFID Systems, Software Defined Networks, Wearable Systems (Health monitoring), Security Surveillance Systems, Air Defence Systems, Microwave Heating Applications and Deep Space Communications/Radio Astronomy.</p>
         <h1 class="intro">Founding Members of IEEE MTT-S DAIICT</h1> 
-        <div class="container_big"><img src="/MTTS website images/prof_Ghodgaonkar.jpg" alt="Dr. Deepak Ghodgaonkar" class="member_picture_big"><div class="placeholder"><h1 class="designation">Dr. Deepak Ghodgaonkar</h1>
+        <div class="container_big"><img src="./MTTS website images/prof_Ghodgaonkar.jpg" alt="Dr. Deepak Ghodgaonkar" class="member_picture_big"><div class="placeholder"><h1 class="designation">Dr. Deepak Ghodgaonkar</h1>
         <p class="designation">Branch Counsellor<br><br><b>IEEE number:</b> 04396198<br><p class="bio"><b>Contributions: </b>Published over 140 papers, 
             Supervised thesis work of 4 PhD students, 
             teaching and research in areas of applied electromagnetics for more than 30 years<br><b>Areas of Research: </b>Microwave Nondestructive Testing of Composite Materials and Microwave Imaging of Human Body</p></p></div>
         </div>
-        <div class="container"><img src="/MTTS website images/Pankaj Chaudhary.JPG" alt="Pankaj Chaudhary" class="member_picture_other"><div class="placeholder"><h1 class="designation">Pankaj Chaudhary</h1>
+        <div class="container"><img src="./MTTS website images/Pankaj Chaudhary.JPG" alt="Pankaj Chaudhary" class="member_picture_other"><div class="placeholder"><h1 class="designation">Pankaj Chaudhary</h1>
         <p class="designation">Chair<br><br><b>IEEE number:</b> 94621008<br><p class="bio"><b>Contributions:</b> Heading all events of the Chapter<br><b>Areas of Research:</b> Antenna design, RF and Microwave</p></p></div>
         </div>
-        <div class="container"><img src="/MTTS website images/Ankita Mehrotra.jpg" alt="Ankita Mehrotra" class="member_picture_wide"><div class="placeholder_wide"><h1 class="designation">Ankita Mehrotra</h1>
+        <div class="container"><img src="./MTTS website images/Ankita Mehrotra.jpg" alt="Ankita Mehrotra" class="member_picture_wide"><div class="placeholder_wide"><h1 class="designation">Ankita Mehrotra</h1>
         <p class="designation">Vice-chair<br><br><b>IEEE number:</b> 94947864<br><p class="bio"><b>Contributions:</b> Founding Member of IEEE MTT-S SB DAIICT</p></p></div>
         </div>
-        <div class="container"><img src="/MTTS website images/Rahul Vashisth.jpg" alt="Rahul Vashisth" class="member_picture"><div class="placeholder"><h1 class="designation">Rahul Vashisth</h1>
+        <div class="container"><img src="./MTTS website images/Rahul Vashisth.jpg" alt="Rahul Vashisth" class="member_picture"><div class="placeholder"><h1 class="designation">Rahul Vashisth</h1>
         <p class="designation">Treasurer<br><br><b>IEEE number:</b> 94620925<br><p class="bio"><b>Contributions:</b> Conducted presentation on 5G, Hands-On Workshop on ML<br><b>Areas of Research:</b> Microwave absorber in 1 to 8 GHz</p></p></div>
         </div>
-        <div class="container"><img src="/MTTS website images/Pratik_Ghosh.jpg" alt="Pratik Ghosh" class="member_picture_other"><div class="placeholder"><h1 class="designation">Pratik Ghosh</h1>
+        <div class="container"><img src="./MTTS website images/Pratik_Ghosh.jpg" alt="Pratik Ghosh" class="member_picture_other"><div class="placeholder"><h1 class="designation">Pratik Ghosh</h1>
         <p class="designation"><b>IEEE number:</b> 94947863<br><p class="bio"><b>Contributions:</b> Founding Member of IEEE MTT-S SB DAIICT</p></p></div>
         </div>
-        <div class="container"><img src="/MTTS website images/Pratik Mevada.JPG" alt="Pratik Mevada" class="member_picture"><div class="placeholder"><h1 class="designation">Pratik Mevada</h1>
+        <div class="container"><img src="./MTTS website images/Pratik Mevada.JPG" alt="Pratik Mevada" class="member_picture"><div class="placeholder"><h1 class="designation">Pratik Mevada</h1>
         <p class="designation"><b>IEEE number:</b> 95157140<br><p class="bio"><b>Contributions:</b> Founding Member of IEEE MTT-S SB DAIICT</p></p></div>
         </div>
         <div class="footer_menu"><div class="placing">   
@@ -56,7 +56,7 @@
             <p style="font-size: 0.5px;">r</p>
             </div>
             <div class="placing">
-                <a href="https://www.daiict.ac.in/" title="DAIICT" class="college_logo" target="_blank"><img src="/MTTS website images/DAIICT logo.png" alt="DAIICT logo"></a>
+                <a href="https://www.daiict.ac.in/" title="DAIICT" class="college_logo" target="_blank"><img src="./MTTS website images/DAIICT logo.png" alt="DAIICT logo"></a>
             </div>
             <div class="placing">
                 <p class="side_heading">Useful Links</p><ul>
