--- a/members.html
+++ b/members.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="member_style.css">
+        <link rel="stylesheet" type="text/css" href="./MTTS Website Code/member_style.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>IEEE MTT-S SB DAIICT</title>
-        <link rel="icon" href="/MTTS website images/Logo MTT-S.png">       
+        <link rel="icon" href="./MTTS website images/Logo MTT-S.png" />       
     </head>
     <body>
-        <h1 id = "header_logo"><img src="/MTTS website images/Logo MTT-S.png" alt="IEEE MTT-S SB DA-IICT" id = "header_logo_left">
-            <a href="https://ieee-sb-daiict.github.io/ieee-2020/index.html" title="IEEE Student Branch DAIICT" target="_blank"><img src="/MTTS website images/IEEE-SB-DAIICT.png" alt="IEEE SB-DAIICT" id = "header_logo_right"></a></h1>
+        <h1 id = "header_logo"><img src="./MTTS website images/Logo MTT-S.png" alt="IEEE MTT-S SB DA-IICT" id = "header_logo_left">
+            <a href="https://ieee-sb-daiict.github.io/ieee-2020/index.html" title="IEEE Student Branch DAIICT" target="_blank"><img src="./MTTS website images/IEEE-SB-DAIICT.png" alt="IEEE SB-DAIICT" id = "header_logo_right"></a></h1>
         <nav class ="header_menu" id="header_menu"><ul class = "header_menu">
-            <li class="header_links"><a href="Home.html" title="Home">HOME</a></li>
+            <li class="header_links"><a href="index.html" title="Home">HOME</a></li>
             <li class="header_links"><a href="events.html" title="Event Timeline">EVENT TIMELINE</a></li>
             <li class="header_links"><a href="gallery_web.html" title="Gallery">GALLERY</a></li>
             <li class="header_links"><a href="https://ieee-sb-daiict.github.io/ieee-2020/team.html" title="Execomm committee">EXECOMM</a></li>
@@ -19,16 +19,16 @@
             <li class="header_links"><a href="contact.html" title="Contact Us">CONTACT US</a></li>
         </ul></nav>
         <h1 class="intro">IEEE MTT-S Execomm 2020 Members</h1>
-        <div class="container"><img src="/MTTS website images/Khyati Bhuva.jpg" alt="Khyati Bhuva" class="member_picture"><div class="placeholder"><h1 class="designation">Khyati Bhuva</h1>
+        <div class="container"><img src="./MTTS website images/Khyati Bhuva.jpg" alt="Khyati Bhuva" class="member_picture"><div class="placeholder"><h1 class="designation">Khyati Bhuva</h1>
         <p class="designation">Event Coordinator<br><br><b>IEEE number:</b> 95099005<br><p class="bio"><b>Contributions:</b> Member and Coordinator of Event Organizing Committee</p></p></div>
         </div>
-        <div class="container"><img src="/MTTS website images/Darshil_Parikh.jpg" alt="Darshil Parikh" class="member_picture_other"><div class="placeholder"><h1 class="designation">Darshil Parikh</h1>
+        <div class="container"><img src="./MTTS website images/Darshil_Parikh.jpg" alt="Darshil Parikh" class="member_picture_other"><div class="placeholder"><h1 class="designation">Darshil Parikh</h1>
         <p class="designation">Webmaster<br><br><b>IEEE number:</b> 96528657<br><p class="bio"><b>Contributions:</b> Website Designer and Developer for MTTS SBC, Member of the  Event Organizing Committee</p></p></div>
         </div>
-        <div class="container"><img src="/MTTS website images/Darshil Shah.jpg" alt="Darshil Shah" class="member_picture"><div class="placeholder"><h1 class="designation">Darshil Shah</h1>
+        <div class="container"><img src="./MTTS website images/Darshil Shah.jpg" alt="Darshil Shah" class="member_picture"><div class="placeholder"><h1 class="designation">Darshil Shah</h1>
         <p class="designation">Content Writer<br><br><b>IEEE number:</b> 96677685<br><p class="bio"><b>Contributions:</b> Content Writing, Member of the Event Organizing Committee</p></p></div>
         </div>
-        <div class="container"><img src="/MTTS website images/Aditya_Srivatava.jpg" alt="Aditya Srivastava" class="member_picture"><div class="placeholder"><h1 class="designation">Aditya Srivastava</h1>
+        <div class="container"><img src="./MTTS website images/Aditya_Srivatava.jpg" alt="Aditya Srivastava" class="member_picture"><div class="placeholder"><h1 class="designation">Aditya Srivastava</h1>
         <p class="designation">Content Writer<br><br><b>IEEE number:</b> 96687212<br><p class="bio"><b>Contributions:</b> Content Writing, Member of the Event Organizing Committee</p></p></div>
         </div>
         <div class="footer_menu"><div class="placing">   
@@ -44,7 +44,7 @@
             <p style="font-size: 0.5px;">r</p>
             </div>
             <div class="placing">
-                <a href="https://www.daiict.ac.in/" title="DAIICT" class="college_logo" target="_blank"><img src="/MTTS website images/DAIICT logo.png" alt="DAIICT logo"></a>
+                <a href="https://www.daiict.ac.in/" title="DAIICT" class="college_logo" target="_blank"><img src="./MTTS website images/DAIICT logo.png" alt="DAIICT logo"></a>
             </div>
             <div class="placing">
                 <p class="side_heading">Useful Links</p><ul>
