--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" type="text/css" href="./MTTS Website Code/home_style.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">   
         <title>IEEE MTT-S SB DAIICT</title> 
-        <link rel="icon" href="/MTTS website images/Logo MTT-S.png">    
+        <link rel="icon" href="./MTTS website images/Logo MTT-S.png" />    
     </head>
     <body>
         <h1 id = "header_logo"><img src="./MTTS website images/Logo MTT-S.png" alt="IEEE MTT-S SB DA-IICT" id = "header_logo_left">
