--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
     <body>
         <h1 id = "header_logo"><img src="./MTTS website images/Logo MTT-S.png" alt="IEEE MTT-S SB DA-IICT" id = "header_logo_left">
             <a href="https://ieee-sb-daiict.github.io/ieee-2020/index.html" title="IEEE Student Branch DAIICT" target="_blank"><img src="./MTTS website images/IEEE-SB-DAIICT.png" alt="IEEE SB-DAIICT" id = "header_logo_right"></a></h1>
-        <nav class ="header_menu" id="header_menu"><ul class = "header_menu">
-            <li class="active"><a href="index.html" title="Home">HOME</a></li>
-            <li class="header_links"><a href="events.html" title="Event Timeline">EVENT TIMELINE</a></li>
-            <li class="header_links"><a href="gallery_web.html" title="Gallery">GALLERY</a></li>
-            <li class="header_links"><a href="https://ieee-sb-daiict.github.io/ieee-2020/team.html" title="Execomm committee">EXECOMM</a></li>
-            <li class="header_links"><a href="members.html" title="Members">MEMBERS</a></li>
-            <li class="header_links"><a href="history.html" title="History">HISTORY</a></li>
-            <li class="header_links"><a href="contact.html" title="Contact Us">CONTACT US</a></li>
-        </ul></nav>    
+         <nav class ="header_menu" id="header_menu">
+            <a href="javascript:void(0)" class="openbtn" onclick="myFunction()">☰</a>
+            <a href="index.html" title="Home" class="active">HOME</a>
+            <a href="events.html" title="Event Timeline">EVENT TIMELINE</a>
+            <a href="gallery_web.html" title="Gallery">GALLERY</a>
+            <a href="https://ieee-sb-daiict.github.io/ieee-2020/team.html" title="Execomm committee">EXECOMM</a>
+            <a href="members.html" title="Members">MEMBERS</a>
+            <a href="history.html" title="History">HISTORY</a>
+            <a href="contact.html" title="Contact Us">CONTACT US</a>
+        </nav>    
         <div class="main_description">
             <img src="./MTTS website images/Logo MTT-S.png" alt="IEEE MTT-S SB DA-IICT" id="desc_logo"></div>
             <p id = "description">IEEE MTT-S Student Branch DAIICT</p><p id="description_text">
