--- a/gallery_web.html
+++ b/gallery_web.html
@@ -63,7 +63,7 @@
                 else $('#header_menu').removeClass('navbar-fixed-top');
             });
             function myFunction() {
-            var x = document.getElementById("testbar");
+            var x = document.getElementById("header_menu");
             if (x.className === "header_menu") {
                       x.className += " responsive";
             } else {
