--- a/members.html
+++ b/members.html
@@ -9,7 +9,7 @@
     <body>
         <h1 id = "header_logo"><img src="./MTTS website images/Logo MTT-S.png" alt="IEEE MTT-S SB DA-IICT" id = "header_logo_left">
             <a href="https://ieee-sb-daiict.github.io/ieee-2020/index.html" title="IEEE Student Branch DAIICT" target="_blank"><img src="./MTTS website images/IEEE-SB-DAIICT.png" alt="IEEE SB-DAIICT" id = "header_logo_right"></a></h1>
-       <nav class ="header_menu" id="testbar">
+       <nav class ="header_menu" id="header_menu">
             <a href="javascript:void(0)" class="openbtn" onclick="myFunction()">☰</a>
             <a href="Home.html" title="Home">HOME</a>
             <a href="events.html" title="Event Timeline">EVENT TIMELINE</a>
