--- a/history.html
+++ b/history.html
@@ -25,7 +25,7 @@
             technical, professional and social activities in the broad area of <b>RF, microwave, millimeter-wave, and terahertz technologies</b>. Microwave radiations are the backbone of electrical communication systems, radar systems, 5G Cellular Technology, Satellite Communication Systems, IoT/RFID Systems, Software Defined Networks, Wearable Systems (Health monitoring), Security Surveillance Systems, Air Defence Systems, Microwave Heating Applications and Deep Space Communications/Radio Astronomy.</p>
         <h1 class="intro">Founding Members of IEEE MTT-S DAIICT</h1> 
         <div class="container_big"><img src="./MTTS website images/prof_Ghodgaonkar.jpg" alt="Dr. Deepak Ghodgaonkar" class="member_picture_big"><div class="placeholder"><h1 class="designation">Dr. Deepak Ghodgaonkar</h1>
-        <p class="designation">Branch Counsellor<br><br><b>IEEE number:</b> 04396198<br><p class="bio"><b>Contributions: </b>Published over 140 papers, 
+        <p class="designation">Chapter Advisor<br><br><b>IEEE number:</b> 04396198<br><p class="bio"><b>Contributions: </b>Published over 140 papers, 
             Supervised thesis work of 4 PhD students, 
             teaching and research in areas of applied electromagnetics for more than 30 years<br><b>Areas of Research: </b>Microwave Nondestructive Testing of Composite Materials and Microwave Imaging of Human Body</p></p></div>
         </div>
