--- a/members.html
+++ b/members.html
@@ -11,7 +11,7 @@
             <a href="https://ieee-sb-daiict.github.io/ieee-2020/index.html" title="IEEE Student Branch DAIICT" target="_blank"><img src="./MTTS website images/IEEE-SB-DAIICT.png" alt="IEEE SB-DAIICT" id = "header_logo_right"></a></h1>
        <nav class ="header_menu" id="header_menu">
             <a href="javascript:void(0)" class="openbtn" onclick="myFunction()">☰</a>
-            <a href="Home.html" title="Home">HOME</a>
+            <a href="index.html" title="Home">HOME</a>
             <a href="events.html" title="Event Timeline">EVENT TIMELINE</a>
             <a href="gallery_web.html" title="Gallery">GALLERY</a>
             <a href="https://ieee-sb-daiict.github.io/ieee-2020/team.html" title="Execomm committee">EXECOMM</a>
