--- a/members.html
+++ b/members.html
@@ -20,6 +20,15 @@
             <a href="contact.html" title="Contact Us">CONTACT US</a>
         </nav> 
         <h1 class="intro">IEEE MTT-S Execomm 2020 Members</h1>
+        <div class="container"><img src="./MTTS website images/Pankaj Chaudhary.JPG" alt="Pankaj Chaudhary" class="member_picture_other"><div class="placeholder"><h1 class="designation">Pankaj Chaudhary</h1>
+        <p class="designation">Chair<br><br><b>IEEE number:</b> 94621008<br><p class="bio"><b>Contributions:</b> Heading all events of the Chapter<br><b>Areas of Research:</b> Antenna design, RF and Microwave</p></p></div>
+        </div>
+        <div class="container"><img src="./MTTS website images/Ankita Mehrotra.jpg" alt="Ankita Mehrotra" class="member_picture_wide"><div class="placeholder_wide"><h1 class="designation">Ankita Mehrotra</h1>
+        <p class="designation">Vice-chair<br><br><b>IEEE number:</b> 94947864<br><p class="bio"><b>Contributions:</b> Founding Member of IEEE MTT-S SB DAIICT</p></p></div>
+        </div>
+        <div class="container"><img src="./MTTS website images/Rahul Vashisth.jpg" alt="Rahul Vashisth" class="member_picture"><div class="placeholder"><h1 class="designation">Rahul Vashisth</h1>
+        <p class="designation">Treasurer<br><br><b>IEEE number:</b> 94620925<br><p class="bio"><b>Contributions:</b> Conducted presentation on 5G, Hands-On Workshop on ML<br><b>Areas of Research:</b> Microwave absorber in 1 to 8 GHz</p></p></div>
+        </div>
         <div class="container"><img src="./MTTS website images/Khyati Bhuva.jpg" alt="Khyati Bhuva" class="member_picture"><div class="placeholder"><h1 class="designation">Khyati Bhuva</h1>
         <p class="designation">Event Coordinator<br><br><b>IEEE number:</b> 95099005<br><p class="bio"><b>Contributions:</b> Member and Coordinator of Event Organizing Committee</p></p></div>
         </div>
@@ -31,6 +40,12 @@
         </div>
         <div class="container"><img src="./MTTS website images/Aditya_Srivatava.jpg" alt="Aditya Srivastava" class="member_picture"><div class="placeholder"><h1 class="designation">Aditya Srivastava</h1>
         <p class="designation">Content Writer<br><br><b>IEEE number:</b> 96687212<br><p class="bio"><b>Contributions:</b> Content Writing, Member of the Event Organizing Committee</p></p></div>
+        </div>
+        <div class="container"><img src="./MTTS website images/Pratik_Ghosh.jpg" alt="Pratik Ghosh" class="member_picture_other"><div class="placeholder"><h1 class="designation">Pratik Ghosh</h1>
+        <p class="designation"><b>IEEE number:</b> 94947863<br><p class="bio"><b>Contributions:</b> Founding Member of IEEE MTT-S SB DAIICT</p></p></div>
+        </div>
+        <div class="container"><img src="./MTTS website images/Pratik Mevada.JPG" alt="Pratik Mevada" class="member_picture"><div class="placeholder"><h1 class="designation">Pratik Mevada</h1>
+        <p class="designation"><b>IEEE number:</b> 95157140<br><p class="bio"><b>Contributions:</b> Founding Member of IEEE MTT-S SB DAIICT</p></p></div>
         </div>
         <div class="footer_menu"><div class="placing">   
             <p class="table_heading">Site Map</p><ul>
