--- a/members.html
+++ b/members.html
@@ -20,6 +20,11 @@
             <a href="contact.html" title="Contact Us">CONTACT US</a>
         </nav> 
         <h1 class="intro">IEEE MTT-S Execomm 2020 Members</h1>
+        <div class="container_big"><img src="./MTTS website images/prof_Ghodgaonkar.jpg" alt="Dr. Deepak Ghodgaonkar" class="member_picture_big"><div class="placeholder"><h1 class="designation">Dr. Deepak Ghodgaonkar</h1>
+        <p class="designation">Chapter Advisor<br><br><b>IEEE number:</b> 04396198<br><p class="bio"><b>Contributions: </b>Published over 140 papers, 
+            Supervised thesis work of 4 PhD students, 
+            teaching and research in areas of applied electromagnetics for more than 30 years<br><b>Areas of Research: </b>Microwave Nondestructive Testing of Composite Materials and Microwave Imaging of Human Body</p></p></div>
+        </div>
         <div class="container"><img src="./MTTS website images/Pankaj Chaudhary.JPG" alt="Pankaj Chaudhary" class="member_picture_other"><div class="placeholder"><h1 class="designation">Pankaj Chaudhary</h1>
         <p class="designation">Chair<br><br><b>IEEE number:</b> 94621008<br><p class="bio"><b>Contributions:</b> Heading all events of the Chapter<br><b>Areas of Research:</b> Antenna design, RF and Microwave</p></p></div>
         </div>
