--- a/history.html
+++ b/history.html
@@ -32,7 +32,7 @@
         <div class="container"><img src="./MTTS website images/Pankaj Chaudhary.JPG" alt="Pankaj Chaudhary" class="member_picture_other"><div class="placeholder"><h1 class="designation">Pankaj Chaudhary</h1>
         <p class="designation">Chair<br><br><b>IEEE number:</b> 94621008<br><p class="bio"><b>Contributions:</b> Heading all events of the Chapter<br><b>Areas of Research:</b> Antenna design, RF and Microwave</p></p></div>
         </div>
-        <div class="container"><img src="./MTTS website images/Ankita Mehrotra.jpg" alt="Ankita Mehrotra" class="member_picture_wide"><div class="placeholder_wide"><h1 class="designation">Ankita Mehrotra</h1>
+        <div class="container"><img src="./MTTS website images/Ankita Mehrotra.jpg" alt="Ankita Mehrotra" class="member_picture_other"><div class="placeholder_wide"><h1 class="designation">Ankita Mehrotra</h1>
         <p class="designation">Vice-chair<br><br><b>IEEE number:</b> 94947864<br><p class="bio"><b>Contributions:</b> Founding Member of IEEE MTT-S SB DAIICT</p></p></div>
         </div>
         <div class="container"><img src="./MTTS website images/Rahul Vashisth.jpg" alt="Rahul Vashisth" class="member_picture"><div class="placeholder"><h1 class="designation">Rahul Vashisth</h1>
